Works with latest pkgs (as of last week)

--- a/user/resources/theme/firefox/oneline.css
+++ b/user/resources/theme/firefox/oneline.css
@@ -71,6 +71,10 @@
   background-color: var(--button-active-bgcolor) !important;
 }
 
-#urlbar-input-container {
+.urlbar-input-container {
   height: 100% !important;
+}
+
+.urlbar-input {
+  height: 2em !important;
 }
