Bookmark bar transparent background

--- a/user/files/theme/firefox/twoline.css
+++ b/user/files/theme/firefox/twoline.css
@@ -1,4 +1,4 @@
-#navigator-toolbox, #tabbrowser-tabs {
+#navigator-toolbox, #tabbrowser-tabs, #PersonalToolbar {
   border: none !important;
   background-color: transparent !important;
 }
