Swaync latest version compatibility

--- a/user/files/theme/swaync/style.css
+++ b/user/files/theme/swaync/style.css
@@ -1,17 +1,21 @@
-@define-color text-color-disabled alpha(@insensitive_fg_color_breeze, 0.7);
-@define-color cc-bg alpha(@theme_base_color_breeze,0.84);
-@define-color noti-border-color @borders_breeze;
+:root {
+  --text-color-disabled: alpha(@insensitive_fg_color_breeze, 0.7);
+  --cc-bg: alpha(@theme_base_color_breeze, 0.84);
+  --noti-border-color: @borders_breeze;
 
-@define-color noti-bg alpha(@theme_base_color_breeze,0.84);
-@define-color noti-bg-darker alpha(@theme_base_color_breeze,1);
-@define-color noti-bg-hover @theme_selected_bg_color_breeze;
-@define-color noti-bg-focus @theme_button_foreground_active_backdrop_breeze;
-@define-color noti-close-bg  @theme_selected_fg_color_breeze;
-@define-color noti-close-bg-hover @theme_selected_bg_color_breeze;
-@define-color text-color @theme_text_color_breeze;
-@define-color bg-selected  @theme_selected_bg_color_breeze;
+  --noti-bg: /* extract RGB values from @theme_base_color_breeze */;
+  --noti-bg-alpha: 0.84;
+  --noti-bg-darker: @theme_base_color_breeze;
+  --noti-bg-hover: @theme_selected_bg_color_breeze;
+  --noti-bg-focus: @theme_button_foreground_active_backdrop_breeze;
+  --noti-close-bg: @theme_selected_fg_color_breeze;
+  --noti-close-bg-hover: @theme_selected_bg_color_breeze;
+  --text-color: @theme_text_color_breeze;
 
-window > box {
+  --bg-selected: @theme_selected_bg_color_breeze;
+}
+
+window > * > box {
   box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.2);
 }
 
@@ -20,7 +24,7 @@ window > box {
 }
 
 .close-button:hover {
-  color: @theme_selected_fg_color_breeze
+  color: @theme_selected_fg_color_breeze;
 }
 
 .notification-action:hover label, .notification-default-action:hover label {
