--- a/user/files/theme/swaync/style.css
+++ b/user/files/theme/swaync/style.css
@@ -3,8 +3,6 @@
   --cc-bg: alpha(@theme_base_color_breeze, 0.84);
   --noti-border-color: @borders_breeze;
 
-  --noti-bg: /* extract RGB values from @theme_base_color_breeze */;
-  --noti-bg-alpha: 0.84;
   --noti-bg-darker: @theme_base_color_breeze;
   --noti-bg-hover: @theme_selected_bg_color_breeze;
   --noti-bg-focus: @theme_button_foreground_active_backdrop_breeze;
@@ -19,16 +17,22 @@ window > * > box {
   box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.2);
 }
 
-.notification-action:hover, .notification-default-action:hover {
-  background: @theme_selected_bg_color_breeze;
+.notification-action:hover,
+.notification-default-action:hover {
+  background: alpha(@theme_button_background_normal_breeze, 0.84);
+}
+
+.notification {
+  background: alpha(@theme_base_color_breeze, 0.84);
 }
 
 .close-button:hover {
   color: @theme_selected_fg_color_breeze;
 }
 
-.notification-action:hover label, .notification-default-action:hover label {
-  color: @theme_selected_fg_color_breeze;
+.notification-action:hover label,
+.notification-default-action:hover label {
+  color: @theme_text_color_breeze;
 }
 
 .control-center-clear-all:hover {
@@ -39,7 +43,8 @@ window > * > box {
   padding-right: 8px;
 }
 
-.notification-row, .notification-group {
+.notification-row,
+.notification-group {
   background: transparent;
 }
 
